# turbo-events

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: adapted-cmake.yml
include/: TurboXML.hpp  turboevents.hpp
lib/: CMakeLists.txt  signals-unix.cpp  turboevents-internal.hpp  turboevents.cpp  turboevents.h
lib/IO/: CMakeLists.txt  ContainerInput.hpp  CountDownInput.hpp  IO.hpp  KafkaOutput.cpp  KafkaOutput.hpp  PrintOutput.hpp  Serializers.hpp  TurboXML.cpp  XMLInput.cpp  XMLInput.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  containerinput.py  events1.xml  events2.xml  events3.xml
